# Opencv_Sketch

./: CMakeCache.txt  CMakeLists.txt  Makefile  PaintByNumbers  cmake_install.cmake
src/: main.cpp
src/cvsource/: pencilSketch.cpp  pencilSketch.h
